--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 							</a>
 							<span class="cart__count">0</span>
 						</div>
-						<button class="cart__button btn btn--orange btn-donate-popup">Donate now</button>
+						<a href="#" class="cart__button btn btn--orange btn-donate-popup">Donate now</a>
 					</div>
 				</div>
 			</div>
@@ -44,8 +44,8 @@
 							<div class="header-content__text">Lorem ipsum dolor sit amet consectetur adipiscing eli
 								mattis sit phasellus mollis sit aliquam sit nullam.</div>
 							<div class="header-content__btns btns-block">
-								<button class="btns-block__button btn btn--orange btn-donate-popup">Donate
-									now</button>
+								<a href="#" class="btns-block__button btn btn--orange btn-donate-popup">Donate
+									now</a>
 								<a href="#" class="btns-block__button btn btn--white">About our charity</a>
 							</div>
 						</div>
@@ -84,7 +84,7 @@
 					<div class="about__row row">
 						<div class="about__item-first item-first">
 							<h2 class="item-first__subtitle small-t">About us</h2>
-							<h3 class="item-first__title lagre-t">We are here to support vulnerable communities</h3>
+							<h3 class="item-first__title large-t">We are here to support vulnerable communities</h3>
 							<div class="item-first__text">Lorem ipsum dolor sit amet consectetur adipiscing elit sed do
 								eiusmod tempor incididunt ut labore et dolore magna aliqua molestie a iaculis at erat
 								pellentesque adipiscing commodo elit at.</div>
@@ -97,8 +97,8 @@
 						</div>
 						<div class="about__item-second item-second">
 							<div class="item-second__btns btns-block">
-								<button class="btns-block__button btn btn--orange btn-donate-popup">Donate
-									now</button>
+								<a href="#" class="btns-block__button btn btn--orange btn-donate-popup">Donate
+									now</a>
 								<a href="#" class="btns-block__button btn btn--white">About us</a>
 							</div>
 							<img src="./img/about/img_3.jpg" alt="boys" class="item-second__img">
@@ -106,11 +106,269 @@
 								felis et netus et malesuada fames urna nec tincidunt praesent semper feugiat metus
 								aliquam eleifend mi in nulla posuere sollicitudin pretium aenean pharetra magna ac
 								placerat.</div>
-							<ul class="item-second__list">
-								<li class="item-second__list-item">Excepteur sint occaecat cupidatat non proident</li>
-								<li class="item-second__list-item">Pellentesque elit ullamcorper dignissim</li>
-								<li class="item-second__list-item">Nibh mauris cursus mattis molestie a iaculis</li>
+							<ul class="item-second__list list">
+								<li class="item-second__list-item list-item">Excepteur sint occaecat cupidatat non
+									proident</li>
+								<li class="item-second__list-item list-item">Pellentesque elit ullamcorper dignissim
+								</li>
+								<li class="item-second__list-item list-item">Nibh mauris cursus mattis molestie a
+									iaculis</li>
 							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="results">
+				<div class="container">
+					<div class="results__row row">
+						<div class="results__content">
+							<h2 class="results__content-subtitle small-t">Our Results</h2>
+							<h3 class="results__content-title large-t">Take a look at the big impact we have done</h3>
+							<div class="result__statistic statistic-result">
+								<div class="statistic-result__item">
+									<div class="statistic-result__image">
+										<img src="./img/results/icon_1.svg" alt="icon">
+									</div>
+									<div class="statistic-result__data">
+										<div class="statistic-result__num">500m</div>
+										<div class="statistic-result__text">Liters of water</div>
+									</div>
+								</div>
+								<div class="statistic-result__item">
+									<div class="statistic-result__image">
+										<img src="./img/results/icon_3.svg" alt="icon">
+									</div>
+									<div class="statistic-result__data">
+										<div class="statistic-result__num">7000+</div>
+										<div class="statistic-result__text">Houses built</div>
+									</div>
+								</div>
+								<div class="statistic-result__item">
+									<div class="statistic-result__image">
+										<img src="./img/results/icon_2.svg" alt="icon">
+									</div>
+									<div class="statistic-result__data">
+										<div class="statistic-result__num">10,000+</div>
+										<div class="statistic-result__text">Toys delivered</div>
+									</div>
+								</div>
+								<div class="statistic-result__item">
+									<div class="statistic-result__image">
+										<img src="./img/results/icon_4.svg" alt="icon">
+									</div>
+									<div class="statistic-result__data">
+										<div class="statistic-result__num">2000+</div>
+										<div class="statistic-result__text">Schools built</div>
+									</div>
+								</div>
+							</div>
+							<a href="#" class="result__button btn btn--orange btn-donate-popup">Donate now</a>
+						</div>
+						<div class="results__image">
+							<img src="./img/results/main.jpg" alt="boy">
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="look">
+				<div class="look__top top-look">
+					<div class="container">
+						<div class="top-look__cta">
+							<h2 class="top-look__subtitle small-t">Take a look at our video</h2>
+							<h3 class="top-look__title large-t">We have helped over 200 vulnerable communities worldwide
+							</h3>
+							<div class="top-look__btns btns-block">
+								<a href="#" class="btns-block__button btn btn--black btn-donate-popup btn-b">Donate
+									now</a>
+								<a href="#" class="btns-block__button btn btn--white btn--p">About our charity</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="look__bottom bottom-look">
+					<div class="bottom-look__container container">
+						<div class="bottom-look__wrapper-p">
+							<div class="bottom-look__wrapper">
+								<div class="bottom-look__video">
+									<img  src="./img/video-block/icon-video.svg" alt="play">
+								</div>
+								<div class="bottom-look__text-block block-text row">
+									<div class="block-text__item">
+										<h4 class="block-text__title medium-t">The goal and mission behind</h4>
+										<div class="block-text__text">Cursus metus aliquam eleifend mi in nulla posuere
+											faucibus
+											interdum posuere lorem ipsum dolor sit amet hendrerit dolor magna eget est
+											lorem.
+											Auctor urna nunc id cursus metus aliquam eleifend. Dictumst quisque sagittis
+											purus
+											sit amet volutpat consequa.</div>
+									</div>
+									<div class="block-text__item">
+										<h4 class="block-text__title medium-t">How our charity got started</h4>
+										<div class="block-text__text">Vitae aliquet nec ullamcorper sit amet risus
+											nullam eget
+											felis et netus et malesuada fames urna nec tincidunt praesent semper feugiat
+											metus
+											aliquam eleifend mi in nulla posuere sollicitudin pretium aenean pharetra
+											magna ac
+											placerat.</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="help">
+				<div class="container">
+					<div class="help__wrapper">
+						<div class="help__header row">
+							<div class="title-block ">
+								<h2 class="help__subtitle title-block__subtitle small-t">How we help?</h2>
+								<h3 class="help__title title-block__title large-t">What are we doing to assist these communities?
+								</h3>
+							</div>
+							<a href="#" class="help__button btn btn--orange btn-donate-popup">Donate now</a>
+						</div>
+						<div class="help__grid">
+							<div class="help__grid-item grid-item">
+								<div class="grid-item__icon">
+									<img src="./img/doing/icon_1.svg" alt="icon">
+								</div>
+								<h4 class="grid-item__title medium-t">House & shelter</h4>
+								<div class="grid-item__text">Lorem ipsum dolor sit amet consecte tur adipiscing elit
+									semper dalar dolor elementum tempus hac.</div>
+							</div>
+							<div class="help__grid-item grid-item">
+								<div class="grid-item__icon">
+									<img src="./img/doing/icon_2.svg" alt="icon">
+								</div>
+								<h4 class="grid-item__title medium-t">Love & support</h4>
+								<div class="grid-item__text">Lorem ipsum dolor sit amet consecte tur adipiscing elit
+									semper dalar cons elementum tempus hac.</div>
+							</div>
+							<div class="help__grid-item grid-item">
+								<div class="grid-item__icon">
+									<img src="./img/doing/icon_3.svg" alt="icon">
+								</div>
+								<h4 class="grid-item__title medium-t">Food & groceries</h4>
+								<div class="grid-item__text">Lorem ipsum dolor sit amet consecte tur adipiscing elit
+									semper dalar cons elementum tempus hac.</div>
+							</div>
+							<div class="help__grid-item grid-item">
+								<div class="grid-item__icon">
+									<img src="./img/doing/icon_4.svg" alt="icon">
+								</div>
+								<h4 class="grid-item__title medium-t">Environmental help</h4>
+								<div class="grid-item__text">Lorem ipsum dolor sit amet consecte tur adipiscing elit
+									semper dalar cons elementum tempus hac.</div>
+							</div>
+							<div class="help__grid-item grid-item">
+								<div class="grid-item__icon">
+									<img src="./img/doing/icon_5.svg" alt="icon">
+								</div>
+								<h4 class="grid-item__title medium-t">Education</h4>
+								<div class="grid-item__text">Lorem ipsum dolor sit amet consecte tur adipiscing elit
+									semper dalar cons elementum tempus hac.</div>
+							</div>
+							<div class="help__grid-item grid-item">
+								<div class="grid-item__icon">
+									<img src="./img/doing/icon_6.svg" alt="icon">
+								</div>
+								<h4 class="grid-item__title medium-t">Health & insurance</h4>
+								<div class="grid-item__text">Lorem ipsum dolor sit amet consecte tur adipiscing elit
+									semper dalar cons elementum tempus hac.</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="join">
+				<div class="join__container container">
+					<div class="join__wrapper row">
+						<h2 class="join__title large-t">Join us and let’s make a better world, today</h2>
+						<div class="join__btns btns-block">
+							<a href="#" class="join__button btn btn--black btn-donate-popup btn-b">Donate
+								now</a>
+							<a href="#" class="join__button btn btn--white btn--p">About our charity</a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="testimonials">
+				<div class="container">
+					<div class="testimonials__wrapper row">
+						<div class="testimonials__image image-block">
+							<img class="image-block__img" src="./img/Testimonials/main.jpg" alt="girls">
+							<div class="image-block__comment comment">
+								<p class="comment__text">“Ultrices eros in cursus turpis massa tincidunt sem nulla
+									pharetra diam sit amet nisl suscipit adipis.”</p>
+								<h5 class="comment__name">Amara Onai</h5>
+								<div class="comment__info">Citizen of South Africa</div>
+							</div>
+						</div>
+						<div class="testimonials__content">
+							<div class="testimonials_title-block title-block ">
+								<h2 class="testimonials__subtitle title-block__subtitle small-t">Testimonials</h2>
+								<h3 class="testimonials__title title-block__title large-t">See how we are making a difference</h3>
+							</div>
+							<div class="testimonials__text">Vitae aliquet nec ullamcorper sit amet risus nullam eget
+								felis etolme netus et malesuada fames urna nec tincidunt praesen</div>
+							<ul class="testimonials__list list">
+								<li class="testimonials__list-item list-item">Excepteur sint occaecat cupidatat non
+									proident</li>
+								<li class="testimonials__list-item list-item">Pellentesque elit ullamcorper dignissim
+								</li>
+								<li class="testimonials__list-item list-item">Nibh mauris cursus mattis molestie a
+									iaculis</li>
+							</ul>
+							<a href="#" class="testimonials__button btn btn--orange btn-donate-popup">Donate
+								now</a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="news">
+				<div class="container">
+					<div class="news__wrapper">
+						<div class="title-block news__title-block">
+							<h2 class="news__subtitle title-block__subtitle small-t">Testimonials</h2>
+							<h3 class="news__title title-block__title large-t">See how we are making a difference</h3>
+						</div>
+						<div class="news__body row">
+							<div class="news-body__item ">
+								<div class="news-body__image">
+									<img src="./img/news/img_1.jpg" alt="food">
+								</div>
+								<div class="news-body__card card">
+									<div class="card__data">
+										<a href="#" class="card__data-tab">Articles</a>
+										<div class="card__data-date">Feb 11, 2022</div>
+									</div>
+									<h4 class="card__title medium-t">What to donate to a food bank and what to avoid ?</h4>
+									<a href="#" class="card__link">Read more</a>
+								</div>
+							</div>
+							<div class="news-body__item ">
+								<div class="news-body__wrapper">
+								<div class="news-body__image">
+									<img src="./img/news/img_2.jpg" alt="charity">
+								</div>
+								<div class="news-body__card card card--right">
+									<div class="card__data ">
+										<a href="#" class="card__data-tab">Resources</a>
+										<div class="card__data-date">Feb 11, 2022</div>
+									</div>
+									<h4 class="card__title medium-t">13 ways to give to charity without breaking your budget</h4>
+									<a href="#" class="card__link">Read more</a>
+								</div>
+							</div>
+							</div>
+						</div>
+						<div class="news__btns btns-block">
+							<a href="#" class="news__btns__button btn btn--orange btn-donate-popup">Donate
+								now</a>
+							<a href="#" class="news__btns__button btn btn--white">Read more news</a>
 						</div>
 					</div>
 				</div>
