burger + some responsive

--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,16 @@
 				<div class="header__row row">
 					<div class="header__logo logo">
 						<img src="./img/header/logo.svg" alt="logo">
+						<div class="logo__txt">Phylanthropy X</div>
 					</div>
 					<nav class="header__menu menu">
 						<ul class="menu__list">
-							<li class="menu__icon"><a href="#" class="menu__link">Home</a></li>
-							<li class="menu__icon"><a href="#" class="menu__link">About</a></li>
-							<li class="menu__icon"><a href="#" class="menu__link">Pages</a></li>
+							<li class="menu__item"><a href="#" class="menu__link">Home</a></li>
+							<li class="menu__item"><a href="#" class="menu__link">About</a></li>
+							<li class="menu__item"><a href="#" class="menu__link">Pages</a></li>	
 						</ul>
 					</nav>
+					
 					<div class="header__cart cart">
 						<div class="cart__wrapper">
 							<a href="#" class="cart__link">
@@ -32,6 +34,10 @@
 						</div>
 						<a href="#" class="cart__button btn btn--orange btn-donate-popup">Donate now</a>
 					</div>
+					<button class="burger">
+						<span></span>
+					</button>
+					<div class="burger__bg"></div>
 				</div>
 			</div>
 			<div class="header__bottom">
@@ -50,7 +56,7 @@
 							</div>
 						</div>
 						<div class="header__bottom-img">
-							<!--<img src="./img/header-bottom/main.jpg" alt="children_img">-->
+							<img src="./img/header-bottom/main.jpg" alt="children_img">
 						</div>
 					</div>
 				</div>
@@ -190,7 +196,7 @@
 						<div class="bottom-look__wrapper-p">
 							<div class="bottom-look__wrapper">
 								<div class="bottom-look__video">
-									<img  src="./img/video-block/icon-video.svg" alt="play">
+									<img src="./img/video-block/icon-video.svg" alt="play">
 								</div>
 								<div class="bottom-look__text-block block-text row">
 									<div class="block-text__item">
@@ -225,7 +231,8 @@
 						<div class="help__header row">
 							<div class="title-block ">
 								<h2 class="help__subtitle title-block__subtitle small-t">How we help?</h2>
-								<h3 class="help__title title-block__title large-t">What are we doing to assist these communities?
+								<h3 class="help__title title-block__title large-t">What are we doing to assist these
+									communities?
 								</h3>
 							</div>
 							<a href="#" class="help__button btn btn--orange btn-donate-popup">Donate now</a>
@@ -310,7 +317,8 @@
 						<div class="testimonials__content">
 							<div class="testimonials_title-block title-block ">
 								<h2 class="testimonials__subtitle title-block__subtitle small-t">Testimonials</h2>
-								<h3 class="testimonials__title title-block__title large-t">See how we are making a difference</h3>
+								<h3 class="testimonials__title title-block__title large-t">See how we are making a
+									difference</h3>
 							</div>
 							<div class="testimonials__text">Vitae aliquet nec ullamcorper sit amet risus nullam eget
 								felis etolme netus et malesuada fames urna nec tincidunt praesen</div>
@@ -345,12 +353,12 @@
 										<a href="#" class="card__data-tab">Articles</a>
 										<div class="card__data-date">Feb 11, 2022</div>
 									</div>
-									<h4 class="card__title medium-t">What to donate to a food bank and what to avoid ?</h4>
+									<h4 class="card__title medium-t">What to donate to a food bank and what to avoid ?
+									</h4>
 									<a href="#" class="card__link">Read more</a>
 								</div>
 							</div>
 							<div class="news-body__item ">
-								<div class="news-body__wrapper">
 								<div class="news-body__image">
 									<img src="./img/news/img_2.jpg" alt="charity">
 								</div>
@@ -359,10 +367,10 @@
 										<a href="#" class="card__data-tab">Resources</a>
 										<div class="card__data-date">Feb 11, 2022</div>
 									</div>
-									<h4 class="card__title medium-t">13 ways to give to charity without breaking your budget</h4>
+									<h4 class="card__title medium-t">13 ways to give to charity without breaking your
+										budget</h4>
 									<a href="#" class="card__link">Read more</a>
 								</div>
-							</div>
 							</div>
 						</div>
 						<div class="news__btns btns-block">
@@ -374,7 +382,56 @@
 				</div>
 			</section>
 		</main>
-		<footer class="footer">footer</footer>
+		<footer class="footer">
+			<div class="container">
+				<div class="footer__top footer-top">
+					<div class="footer-top__logo">
+						<div class="logo logo__img">
+							<img src="./img/header/logo.svg" alt="logo">
+							<div class="logo__txt">Phylanthropy X</div>
+						</div>
+						<p class="footer-top__text">Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam mauris.</p>
+					</div>
+					<nav class="footer-top__menu footer-menu">
+						<h5 class="footer-menu__title">Menu</h5>
+						<ul class="footer-menu__list">
+							<li class="footer-menu__item"><a href="#" class="footer-menu__link">Home</a></li>
+							<li class="footer-menu__item"><a href="#" class="footer-menu__link">About</a></li>
+							<li class="footer-menu__item"><a href="#" class="footer-menu__link">Blog</a></li>
+							<li class="footer-menu__item"><a href="#" class="footer-menu__link">Blog post</a></li>
+							<li class="footer-menu__item"><a href="#" class="footer-menu__link">Donate</a></li>
+							<li class="footer-menu__item"><a href="#" class="footer-menu__link">Donate Single</a></li>
+							<li class="footer-menu__item"><a href="#" class="footer-menu__link">Contact</a></li>
+						</ul>
+					</nav>
+					<div class="footer-menu__utility menu-utility">
+						<h5 class="menu-utility__title">Utility Pages</h5>
+						<ul class="menu-utility__list">
+							<li class="menu-utility__item"><a href="#" class="menu-utility__link">Start here</a></li>
+							<li class="menu-utility__item"><a href="#" class="menu-utility__link">Styleguide</a></li>
+							<li class="menu-utility__item"><a href="#" class="menu-utility__link">Password Protected</a></li>
+							<li class="menu-utility__item"><a href="#" class="menu-utility__link">404 Not found</a></li>
+							<li class="menu-utility__item"><a href="#" class="menu-utility__link">Licenses</a></li>
+							<li class="menu-utility__item"><a href="#" class="menu-utility__link">Changelog</a></li>
+						</ul>
+					</div>
+					<section class="footer-top__join join-footer">
+							<div class="join-footer__wrapper">
+								<h2 class="join-footer__title medium-t">Join us and let’s make a better world, today</h2>
+								<div class="join-footer__btns">
+									<a href="#" class="join-footer__button btn btn--black btn-donate-popup btn-b">Donate
+										now</a>
+									<a href="#" class="join-footer__button btn btn--white btn--p">More ways to help</a>
+								</div>
+							</div>
+					</section>
+				</div>
+				<div class="footer__bottom row">
+					<div class="footer__bottom-copyright"></div>
+					<div class="social"></div>
+				</div>
+			</div>
+		</footer>
 	</div>
 </body>
 
