--- a/src/index.html
+++ b/src/index.html
@@ -340,8 +340,8 @@
 				<div class="container">
 					<div class="news__wrapper">
 						<div class="title-block news__title-block">
-							<h2 class="news__subtitle title-block__subtitle small-t">Testimonials</h2>
-							<h3 class="news__title title-block__title large-t">See how we are making a difference</h3>
+							<h2 class="news__subtitle title-block__subtitle small-t">News & Resources</h2>
+							<h3 class="news__title title-block__title large-t">Read our latest news</h3>
 						</div>
 						<div class="news__body row">
 							<div class="news-body__item ">
@@ -388,7 +388,7 @@
 					<div class="footer-top__logo">
 						<div class="logo logo__img">
 							<img src="./img/header/logo.svg" alt="logo">
-							<div class="logo__txt">Phylanthropy X</div>
+							<div class="logo__txt footer-logo-txt">Phylanthropy X</div>
 						</div>
 						<p class="footer-top__text">Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam mauris.</p>
 					</div>
@@ -427,12 +427,22 @@
 					</section>
 				</div>
 				<div class="footer__bottom row">
-					<div class="footer__bottom-copyright"></div>
-					<div class="social"></div>
+					<div class="footer__bottom-copyright">Copyright © Philanthropy X </div>
+					<ul class="social">
+						<li class="social__item"><a href="#" class="social__link"><i class="fa-brands fa-facebook"></i></a></li>
+
+						<li class="social__item"><a href="#" class="social__link">
+							<i class="fa-brands fa-twitter"></i>
+						</a></li>
+
+						<li class="social__item"><a href="#" class="social__link">
+							<i class="fa-brands fa-youtube"></i>
+						</a></li>
+					</ul>
 				</div>
 			</div>
 		</footer>
 	</div>
 </body>
-
+<script src="https://kit.fontawesome.com/54517591de.js" crossorigin="anonymous"></script>
 </html>
